@@ -27,6 +27,7 @@ package com.oracle.svm.test;
 
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertThrows;
+import static org.junit.Assert.assertTrue;
 
 import java.lang.reflect.Executable;
 import java.lang.reflect.Field;
@@ -40,6 +41,8 @@ import org.junit.Test;
 
 import com.oracle.svm.hosted.substitute.SubstitutionReflectivityFilter;
 
+import jdk.internal.misc.Unsafe;
+
 /**
  * Tests the {@link RuntimeReflection}.
  */
@@ -49,6 +52,9 @@ public class ReflectionRegistrationTest {
 
     public static class FieldLookupTarget {
         public int value = FIELD_LOOKUP_TEST_VALUE;
+    }
+
+    public static class UnsafeAllocationTarget {
     }
 
     public static class TestFeature implements Feature {
@@ -134,6 +140,36 @@ public class ReflectionRegistrationTest {
     public void testFieldLookupAllowsAccess() throws ReflectiveOperationException {
         Field field = FieldLookupTarget.class.getDeclaredField("value");
         assertEquals(FIELD_LOOKUP_TEST_VALUE, field.get(new FieldLookupTarget()));
+    }
+
+    private static Object unsafeAllocate(Class<?> clazz) throws ReflectiveOperationException {
+        Field unsafeField = Unsafe.class.getDeclaredField("theUnsafe");
+        unsafeField.setAccessible(true);
+        return ((Unsafe) unsafeField.get(null)).allocateInstance(clazz);
+    }
+
+    @NativeImageBuildArgs({
+                    "--add-exports=java.base/jdk.internal.misc=ALL-UNNAMED",
+                    "--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED"
+    })
+    public static class UnsafeAllocationLegacyTest {
+        @Test
+        public void testUnregisteredUnsafeAllocationKeepsLegacyExceptionType() {
+            IllegalArgumentException exception = assertThrows(IllegalArgumentException.class, () -> unsafeAllocate(UnsafeAllocationTarget.class));
+            assertTrue(exception.getMessage().contains("unsafeAllocated"));
+        }
+    }
+
+    @NativeImageBuildArgs({
+                    "--add-exports=java.base/jdk.internal.misc=ALL-UNNAMED",
+                    "--add-opens=java.base/jdk.internal.misc=ALL-UNNAMED",
+                    "--future-defaults=exact-reflection"
+    })
+    public static class ExactReflectionFutureDefaultTest {
+        @Test
+        public void testUnregisteredUnsafeAllocationThrowsMissingRegistrationError() {
+            assertThrows(MissingReflectionRegistrationError.class, () -> unsafeAllocate(UnsafeAllocationTarget.class));
+        }
     }
 
     @NativeImageBuildArgs({
